added code that was missing after changing the rpevious code and changedbthe files to ES Module syntax because an error didnt let the code work syaing the inquirer was not working

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svglogomakercla",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "directories": {
     "example": "examples",
     "lib": "lib"
